# Token-Holders-Tracker

./: .env  Cargo.toml  README.md  index.html  package-lock.json  package.json  token.js
src/: erc20_abi.json  main.rs
