[package]
name = "token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
hex-literal = "0.3"
web3 = "0.17.0"
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
ethcontract = { version = "0.15.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.0"
env_logger = "0.8.4"
ordered-map = "0.4.2"
contract-address = "0.6.0"
libmath = "0.2.1"
round = "0.1.0"
async-recursion = "1.0.0"